# ProyectoFisica

./: CL.yml  Datos3_csv  Datos4_csv  Datos5_csv  Datos6_csv  README.md  codigo.md  codigo_grafica.py  codigo_grafica2.py  codigo_grafica3.py  codigo_grafica4.py  codigo_grafica5.py  codigo_grafica6.py  datos_linealizados.py  informe.md  pyproject.toml  pyproject3.toml  pyproject4.toml  pyproyecto.toml  teoria_git.md  teoria_maven.md  teoria_unittest.md  test_coeficienteA.py
.github/workflows/: CL.yml  Cl.yml  ci.yml  codigo_grafica2.py
labfisica/src1/labfisica1/: codigo_grafica.py
labfisica/src2/labfisica2/: CsvScatterPlot.py
labfisica/src4/labfisica4/: codigo_grafica4.py  pyproject4.toml
labfisica/src5/labfisica5/: CsvScatterPlot.py  pyproject5.toml  tabla5.csv
labfisica/src6/labfisica6/: CsvScatterPlot.py  (+3 more)
mmc/: MMC.py  MMC_datoslinealizados.py  constante.py  datos_csv.txt  datos_linealizados.py  informe_constante.md  linearizacion.py  pyproject.toml
mmc/.github/workflows/: CI.yml
mmc/github/: CI.yml
mmc/pytest/: test_errores_A_B.py
mmc/test/: test_coeficienteA.py  test_coeficienteB.py  test_errores_A_B.py
mmc/tests/: mmc_test.py  reader.py  test_coeficienteA.py  test_coeficienteB.py  test_errores_A_B.py
movimiento_armonico/: Datos_csv
src/labfisica/: CsvScatterPlot.py  codigo_grafica2.py
src01/labfisica01/: CsvScatterPlot.py  codigo_grafica01.py  pyproject01.toml  tabla01.csv
src02/labfisica02/: CsvScatterPlot.py  codigo_grafica01.py
src03/labfisica03/: codigo_grafica03.py  tabla03.csv
src1/labfisica1/: pyproject01.toml
src2/labfisica2/: codigo_grafica3.py  tabla3.csv
src3/labfisica3/: CsvScatterPlot.py  codigo_grafica3.py  pyproject3.toml  tabla3.csv
src4/labfisica4/: CsvScatterPlot.py  codigo_grafica4.py  tabla4.csv
src5/labfisica5/: codigo_grafica5.py
srcmmc/: graficos.py  linearizacion.py  mmc.py
teoria/: teoria_unittest.md
(+4 files in other folders)
