[tool.poetry]
version = "0.1.0"
readme = "README.md"
packages = [
     { include = "labfisica/src01/labfisica01" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

